--- a/package.json
+++ b/package.json
@@ -9,9 +9,15 @@
     "lint": "eslint"
   },
   "dependencies": {
+    "@prisma/adapter-pg": "^7.4.1",
+    "@prisma/client": "^7.4.1",
     "next": "16.1.6",
+    "node-cron": "^4.2.1",
+    "node-fetch": "^2.7.0",
+    "prisma": "^7.4.1",
     "react": "19.2.3",
-    "react-dom": "19.2.3"
+    "react-dom": "19.2.3",
+    "zod": "^4.3.6"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
